--- a/style.css
+++ b/style.css
@@ -1,78 +1,76 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-body{
+body {
     animation: bgcolor infinite 20s;
-}
-.container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 100vh;
+}
+
+.container {
+    text-align: center;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 40%;
 }
 
-.container img{
-    margin-top: 35%;
-    margin-left: 10%;
-    position: relative;
-    width: 300px;
-    height: 300px;
+.container img {
+    width: 400px;
+    height: 400px;
     object-fit: cover;
-    align-items: center;
-    outline-color: black;
+    margin-bottom: 20px;
 }
 
-.container h1{
-    align-items: center;
-    margin-left: 25%;
-    top: 60%;
-    left: 15%;
+.container h1 {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 36px;
     font-weight: 1000;
     color: black;
 }
 
-@keyframes bgcolor{
-    0%{
-        background:#c7ecee ;
+@keyframes bgcolor {
+    0% {
+        background: #c7ecee;
     }
-    20%{
+    20% {
         background: #badc58;
     }
-    40%{
+    40% {
         background: #30336b;
     }
-    60%{
-        background:#535c68 ;
+    60% {
+        background: #535c68;
     }
-    80%{
+    80% {
         background: #f6e58d;
     }
-    100%{
-        background:#95afc0 ;
+    100% {
+        background: #95afc0;
     }
 }
 
-@media screen and (max-width:600px) {
-    h1{
-        font-size: 36px;
+@media screen and (max-width: 600px) {
+    .container h1 {
+        font-size: 28px;
     }
 
-    img{
-        height: 200px;
-        width: 200px;
-    }
-}
-
-@media  screen and (max-width:900px) and (min-width:600px) {
-    h1{
-        font-size: 46px;
-    }
-    img{
+    .container img {
         height: 300px;
         width: 300px;
+    }
+}
+
+@media screen and (max-width: 900px) and (min-width: 600px) {
+    .container h1 {
+        font-size: 32px;
+    }
+
+    .container img {
+        height: 350px;
+        width: 350px;
     }
 }
